update footer form and add footer's title

--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
     <footer id="footer" class="shock-footer scheme-1 primary">
       <div class="footer-content focus-trigger">
         <div class="container">
-          <div class="row g-3">
+          <div class="row g-3 d-flex justify-content-between">
             <div class="col-12 col-md-6 col-lg-3">
               <div class="footer-item">
                 <!-- Brand -->
@@ -892,23 +892,23 @@
                 <!-- Links list -->
                 <ul class="nav-list list-unstyled">
                   <li class="nav-item">
-                    <a href="#your-link" class="nav-link has-icon">
-                      <span class="text">Who We Are</span>
+                    <a href="#about" class="nav-link has-icon">
+                      <span class="text">About</span>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#your-link" class="nav-link has-icon">
-                      <span class="text">Social Projects</span>
+                    <a href="#company" class="nav-link has-icon">
+                      <span class="text">Group Companies</span>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#your-link" class="nav-link has-icon">
-                      <span class="text">Our Services</span>
+                    <a href="#sectors" class="nav-link has-icon">
+                      <span class="text">Sectors</span>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#your-link" class="nav-link has-icon">
-                      <span class="text">Privacy Police</span>
+                    <a href="#contact" class="nav-link has-icon">
+                      <span class="text">Contact</span>
                     </a>
                   </li>
                 </ul>
