update tasks problem

--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
                 </div>
                 <div id="h-2" class="tab-pane fade" role="tabpanel">
                   <div class="max-w-65 mx-auto text-center">
-                    <p>Activities are shown in various sectors; to provide innovative, high-quality, reliable services and solutions, to reach global goals by increasing brand awareness and making people proud.</p>
+                    <p>To provide innovative, qualitative, reliable services and solutions in all areas of activity, to achieve its global goals by increasing brand awareness and making its nation proud with the group companies in different sectors.</p>
                   </div>
                 </div>
                 <div id="h-3" class="tab-pane fade" role="tabpanel">
                   <div class="max-w-65 mx-auto text-center">
-                    <p>To be one of the world's leading original companies with group companies that maintain sustainable growth in the global market, are preferred by their competitiveness, are trusted as a strategic partner, are sensitive to the environment and people, and operate in different fields.</p>
+                    <p>To be one of the leading unique companies in the world which maintains its sustainable development in the global market, is preferred with its competitive power, is trusted as a strategic partner, and is sensitive to the environment and human with the successful group companies.</p>
                   </div>
                 </div>
                 <div id="h-4" class="tab-pane fade" role="tabpanel">
@@ -196,7 +196,7 @@
           <div class="basic-intro text-center">
             <h1 class="title">
               <!-- <span class="text-1 d-block text-style-2 text-outline text-gradient scheme-1">We provide</span> -->
-              <span class="text-2 d-block text-style-2 text-italic text-gradient scheme-1">GROUP COMPANIES</span>
+              <span class="text-2 d-block text-style-2 text-italic text-gradient scheme-1">Group Companies</span>
             </h1>
           </div>
         </div>
@@ -260,7 +260,7 @@
               <div class="card double-edge has-icon parent">
                 <div class="card-body">
                   <img class="card-image-icon primary" src="./assets/images/grup-şirketleri/bayburtgrup.png" alt="Icon name" data-shock-icon="32" />
-                  <h3 class="title text-style-11 gray">BAYBURT HOLDİNG</h3>
+                  <h3 class="title text-style-11 gray">BAYBURT GRUP</h3>
                   <!-- <p class="description">Through innovative concepts we develop the brand's strategy and history in order to give the company authority.</p> -->
                   <!-- Button -->
                   <div class="button-wrapper align-h-right">
@@ -350,7 +350,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="http://sutkardesler.com.tr/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
@@ -400,7 +400,7 @@
                   </div>
                 </div>
                 <!-- Link -->
-                <a href="#your-link" class="full-link">
+                <a href="https://www.hasanbey.com/" class="full-link" target="_blank">
                   <div class="overlay gray-25 magnetic-effect"></div>
                 </a>
               </div>
@@ -882,7 +882,7 @@
                 </a>
                 <!-- Text -->
                 <div class="footer-text">
-                  <p>Shenbay Holding has been successfully operating for half a century in the fields of fuel supply, insurance and brokerage services, greenhouse cultivation, renewable energy production, mining, animal husbandry, food production and sales in the energy, production and service sectors, mainly the construction sector.</p>
+                  <p>Senbay Holding has been successfully operating for a quarter of a century in the fields of construction, greenhouse cultivation, renewable energy production, mining, fuel supply, insurance, information technology, animal husbandry, food production and sales.</p>
                 </div>
               </div>
             </div>
@@ -930,7 +930,8 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                      <span class="text">Anıttepe Məh. Işık küç. No: 20 Çankaya /ANKARA</span>
+                      <span class="text">Yukarı Öveçler district. 1276. Street. No: 18
+                        06460 Chankaya /ANKARA</span>
                   </li>
                 </ul>
               </div>
