translate and gradient update

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                         <img src="./assets/images/faaliyyet/helmet.png" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">İNŞAAT</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">CONSTRUCTION</h5>
                   </div>
                   <div class="col-4">
                     <a class="item hover-opacity">
@@ -551,7 +551,7 @@
                         <img src="./assets/images/faaliyyet/energy.png" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">ENERJİ</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">ENERGY</h5>
                   </div>
                   <div class="col-4">
                     <a class="item hover-opacity">
@@ -560,7 +560,7 @@
                         <img src="./assets/images/faaliyyet/seracilik.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">SERACILIK</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">GREENHOUSE</h5>
                   </div>
                   <div class="col-4">
                     <a class="item hover-opacity">
@@ -569,7 +569,7 @@
                         <img src="./assets/images/faaliyyet/cow.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">HAYVANCILIK</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">FARMING</h5>
                   </div>
                   <div class="col-4">
                     <a class="item hover-opacity">
@@ -578,7 +578,7 @@
                         <img src="./assets/images/faaliyyet/sigortacilik.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">SİGORTACILIK</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">INSURANCE</h5>
                   </div>
                   <div class="col-4">
                     <a class="item hover-opacity">
@@ -587,7 +587,7 @@
                         <img src="./assets/images/faaliyyet/petrol.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">AKARYAKIT DAĞITIM</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">FUEL DISTRIBUTION</h5>
                   </div>
                   <div class="col-4">
                     <a class="item hover-opacity">
@@ -596,7 +596,7 @@
                         <img src="./assets/images/faaliyyet/hizmet.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">HİZMET</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">SERVICE</h5>
                   </div>
                   <div class="col-4">
                     <a class="item hover-opacity">
@@ -605,7 +605,7 @@
                         <img src="./assets/images/faaliyyet/tarim.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">TARIM</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">AGRICULTURE</h5>
                   </div>
                   <div class="col-4">
                     <a class="item hover-opacity">
@@ -614,7 +614,7 @@
                         <img src="./assets/images/faaliyyet/bilisim.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
                       </div>
                     </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">BİLİŞİM</h5>
+                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">INFORMATICS</h5>
                   </div>
                 </div>
               </div>
