--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
                 <!-- Intro -->
                 <div class="basic-intro">
                   <h2 class="title text-style-5">
-                    <span class="text-2 text-style-3 text-italic text-gradient scheme-1">SENBAY HOLDING</span>
+                    <span class="text-2 text-style-3 text-italic text-gradient scheme-1">SENBAY HOLDING</span>                 
                   </h2>
                   <div class="description gray">
                     <p>We use the best technologies available on the market to ensure that our customers obtain positive results. -- During 50 years left behind, with the target of become one of the world’s leading brand companies, we are shaping the industries.</p>
@@ -940,7 +940,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                      <span class="text">Yukarı Öveçler district. 1276. Street. No: 18
+                      <span class="text">Yukarı Ovecler District. 1276. Street. No: 18
                         06460 Chankaya /ANKARA</span>
                   </li>
                 </ul>
