--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                     <span class="text-2 text-style-3 text-italic text-gradient scheme-1">SENBAY HOLDING</span>                 
                   </h2>
                   <div class="description gray">
-                    <p>We use the best technologies available on the market to ensure that our customers obtain positive results. -- During 50 years left behind, with the target of become one of the world’s leading brand companies, we are shaping the industries.</p>
+                    <p>During 50 years left behind, with the target of become one of the world’s leading brand companies, we are shaping the industries.</p>
                   </div>
                 </div>
                 <hr class="gray-25">
