--- a/index.html
+++ b/index.html
@@ -634,7 +634,8 @@
                 <!-- Intro -->
                 <div class="basic-intro">
                   <h2 class="title text-style-5">
-                    <span class="text-2 text-style-3 text-italic text-gradient scheme-1">SENBAY HOLDING</span>                 
+                    <span class="text-2 text-style-3 text-italic text-gradient scheme-1">SENBAY</span> 
+                    <span class="text-2 text-style-3 text-italic text-gradient scheme-1">HOLDING</span>       
                   </h2>
                   <div class="description gray">
                     <p>During 50 years left behind, with the target of become one of the world’s leading brand companies, we are shaping the industries.</p>
@@ -775,12 +776,12 @@
                 <span>229 08 08</span>
               </div>   
               <div class="description gray">
-                <p>Please contact us for more information about our services.<br> It will be a pleasure to find out how we can help.</p>
+                <p>Please contact us for more information and inquiries.</p>
               </div>
               <!-- Button -->
               <a href="#modal" class="button outline gray secondary-hover" data-bs-toggle="modal" data-bs-target="#modal">
                 <span class="hover-rotate">
-                  <span class="button-text white white-hover">Get Started</span>
+                  <span class="button-text white white-hover">Get in touch</span>
                   <i class="fa-solid fa-arrow-right button-icon white white-hover"></i>
                 </span>
               </a>
@@ -804,7 +805,7 @@
                 <span class="text-2 text-italic white">we <mark class="animated-underline secondary">help you</mark>?</span>
               </h2>
               <div class="description gray">
-                <p>Please fill in the form below and we will get back to you shortly. 🥳</p>
+                <p>Please fill in the form below and we will get back to you soon.</p>
               </div>
             </div>
           </div>
@@ -834,21 +835,7 @@
                   </div>
                 </div>
                 <div class="form-row row">
-                  <div class="form-col col-12 col-md-8">
-                    <div class="form-check form-switch">
-                      <input type="checkbox" name="info-1" id="InputSwitchChecked" class="form-check-input form-switch" value="I want to receive news from this site by email." checked="checked">
-                      <label class="form-label form-check-label" for="InputSwitchChecked">
-                        I want to receive news from this site by email.
-                      </label>
-                    </div>
-                    <div class="form-check form-switch">
-                      <input type="checkbox" name="info-2" id="InputSwitch" class="form-check-input form-switch" value="I want to receive news from this site by sms.">
-                      <label class="form-label form-check-label" for="InputSwitch">
-                        I want to receive news from this site by sms.
-                      </label>
-                    </div>
-                  </div>
-                  <div class="form-col col-12 col-md-4 align-h-right">
+                  <div class="form-col col- align-h-right">
                     <!-- Button -->
                     <button class="button outline gray secondary-hover magnetic-effect">
                       <span class="button-text white white-hover">Send</span>
