update favicon icon

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
   <!-- Preloader -->
-  <div id="preloader" class="preloader" data-delay="0" data-limit="3000">
+  <!-- <div id="preloader" class="preloader" data-delay="0" data-limit="3000">
     <img src="./assets/images/senbay_logo.svg" class="emblem" alt="Emblem" hidden="hidden" />
-  </div>
+  </div> -->
 
   <head>
 
@@ -16,7 +16,8 @@
     <title>Shenbay Holding</title>
     <meta name="description" content="Shock is a creative multipurpose theme for building websites. It is based on Bootstrap 5 and other of the best and most up-to-date code libraries used by professional developers in the world.">
     <meta name="author" content="Codings">
-    <link rel="shortcut icon" href="./assets/images/senbay_logo.svg" type="image/x-icon" />
+    <!-- <link rel="shortcut icon" href="./assets/images/senbay_logo.svg" type="image/x-icon" /> -->
+    <link rel="icon" type="image/x-icon" href="./assets/images/logo-white.svg">
   
     <!-- Vendor CSS -->
     <link rel="stylesheet" href="assets/css/vendor/preloader.min.css" />
