--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <!-- Main -->
     <main id="main" class="shock-main bg-color">
 
-      <section class="introSenbay">
-        <img src="./assets/images/senbay-main.png" alt="">
+      <section class="introSenbay" style="background-color: black;">
+        <img src="./assets/images/sliderWhite.png" alt="">
       </section>
 
 
