--- a/index.html
+++ b/index.html
@@ -542,109 +542,109 @@
       <section class="shock-section pt-4 pb-4">
         <div class="container">
           <div class="row g-4">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-12">
               <!-- Gallery -->
               <div class="gallery">
                 <div class="row g-1">
-                  <div class="col-4">
-                    <a class="item hover-opacity">
-                      <div class="image-wrapper floating-item">
-                        <div class="overlay has-border top-item left-item gray gallery-width"></div>
-                        <img src="./assets/images/faaliyyet/helmet.png" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
-                      </div>
-                    </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">CONSTRUCTION</h5>
+                  <div class="row col-12 d-flex justify-content-between">
+                    <div class="col-2">
+                      <a class="item hover-opacity">
+                        <div class="image-wrapper floating-item">
+                          <div class="overlay has-border top-item left-item gray gallery-width"></div>
+                          <img src="./assets/images/faaliyyet/helmet.png" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
+                        </div>
+                      </a>
+                      <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">CONSTRUCTION</h5>
+                    </div>
+                    <div class="col-2">
+                      <a class="item hover-opacity">
+                        <div class="image-wrapper floating-item">
+                          <div class="overlay has-border top-item gray gallery-width"></div>
+                          <img src="./assets/images/faaliyyet/energy.png" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
+                        </div>
+                      </a>
+                      <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">ENERGY</h5>
+                    </div>
+                    <div class="col-2">
+                      <a class="item hover-opacity">
+                        <div class="image-wrapper floating-item">
+                          <div class="overlay has-border top-item border-end-0 gray gallery-width"></div>
+                          <img src="./assets/images/faaliyyet/seracilik.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
+                        </div>
+                      </a>
+                      <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">GREENHOUSE</h5>
+                    </div>
+                    <div class="col-2">
+                      <a class="item hover-opacity">
+                        <div class="image-wrapper floating-item">
+                          <div class="overlay has-border bottom-item left-item gray gallery-width"></div>
+                          <img src="./assets/images/faaliyyet/cow.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
+                        </div>
+                      </a>
+                      <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">FARMING</h5>
+                    </div>
+                    <div class="col-2">
+                      <a class="item hover-opacity">
+                        <div class="image-wrapper floating-item">
+                          <div class="overlay has-border bottom-item gray gallery-width"></div>
+                          <img src="./assets/images/faaliyyet/sigortacilik.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
+                        </div>
+                      </a>
+                      <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">INSURANCE</h5>
+                    </div>
                   </div>
-                  <div class="col-4">
-                    <a class="item hover-opacity">
-                      <div class="image-wrapper floating-item">
-                        <div class="overlay has-border top-item gray gallery-width"></div>
-                        <img src="./assets/images/faaliyyet/energy.png" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
-                      </div>
-                    </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">ENERGY</h5>
-                  </div>
-                  <div class="col-4">
-                    <a class="item hover-opacity">
-                      <div class="image-wrapper floating-item">
-                        <div class="overlay has-border top-item border-end-0 gray gallery-width"></div>
-                        <img src="./assets/images/faaliyyet/seracilik.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
-                      </div>
-                    </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">GREENHOUSE</h5>
-                  </div>
-                  <div class="col-4">
-                    <a class="item hover-opacity">
-                      <div class="image-wrapper floating-item">
-                        <div class="overlay has-border bottom-item left-item gray gallery-width"></div>
-                        <img src="./assets/images/faaliyyet/cow.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
-                      </div>
-                    </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">FARMING</h5>
-                  </div>
-                  <div class="col-4">
-                    <a class="item hover-opacity">
-                      <div class="image-wrapper floating-item">
-                        <div class="overlay has-border bottom-item gray gallery-width"></div>
-                        <img src="./assets/images/faaliyyet/sigortacilik.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
-                      </div>
-                    </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">INSURANCE</h5>
-                  </div>
-                  <div class="col-4">
-                    <a class="item hover-opacity">
-                      <div class="image-wrapper floating-item">
-                        <div class="overlay has-border bottom-item border-end-0 gray gallery-width"></div>
-                        <img src="./assets/images/faaliyyet/petrol.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
-                      </div>
-                    </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">FUEL DISTRIBUTION</h5>
-                  </div>
-                  <div class="col-4">
-                    <a class="item hover-opacity">
-                      <div class="image-wrapper floating-item">
-                        <div class="overlay has-border top-item left-item gray gallery-width"></div>
-                        <img src="./assets/images/faaliyyet/hizmet.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
-                      </div>
-                    </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">SERVICE</h5>
-                  </div>
-                  <div class="col-4">
-                    <a class="item hover-opacity">
-                      <div class="image-wrapper floating-item">
-                        <div class="overlay has-border bottom-item gray gallery-width"></div>
-                        <img src="./assets/images/faaliyyet/tarim.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
-                      </div>
-                    </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">AGRICULTURE</h5>
-                  </div>
-                  <div class="col-4">
-                    <a class="item hover-opacity">
-                      <div class="image-wrapper floating-item">
-                        <div class="overlay has-border top-item border-end-0 gray gallery-width"></div>
-                        <img src="./assets/images/faaliyyet/bilisim.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
-                      </div>
-                    </a>
-                    <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">INFORMATICS</h5>
+
+                  <div class="row col-12 d-flex justify-content-between">
+                    <div class="col-2">
+                      <a class="item hover-opacity">
+                        <div class="image-wrapper floating-item">
+                          <div class="overlay has-border bottom-item border-end-0 gray gallery-width"></div>
+                          <img src="./assets/images/faaliyyet/petrol.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
+                        </div>
+                      </a>
+                      <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">FUEL DISTRIBUTION</h5>
+                    </div>
+                    <div class="col-2">
+                      <a class="item hover-opacity">
+                        <div class="image-wrapper floating-item">
+                          <div class="overlay has-border top-item left-item gray gallery-width"></div>
+                          <img src="./assets/images/faaliyyet/hizmet.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
+                        </div>
+                      </a>
+                      <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">SERVICE</h5>
+                    </div>
+                    <div class="col-2">
+                      <a class="item hover-opacity">
+                        <div class="image-wrapper floating-item">
+                          <div class="overlay has-border bottom-item gray gallery-width"></div>
+                          <img src="./assets/images/faaliyyet/tarim.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
+                        </div>
+                      </a>
+                      <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">AGRICULTURE</h5>
+                    </div>
+                    <div class="col-2">
+                      <a class="item hover-opacity">
+                        <div class="image-wrapper floating-item">
+                          <div class="overlay has-border top-item border-end-0 gray gallery-width"></div>
+                          <img src="./assets/images/faaliyyet/bilisim.svg" class="image p-1 fit-cover gallery-width" alt="This is an example description for this item." />
+                        </div>
+                      </a>
+                      <h5 class="gallery-width" style="text-align: center; padding-top: 1rem;">INFORMATICS</h5>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 align-v-center">
-              <div class="holder">
-                <!-- Intro -->
-                <div class="basic-intro">
-                  <h2 class="title text-style-5">
-                    <span class="text-2 text-style-3 text-italic text-gradient scheme-1">SENBAY</span> 
-                    <span class="text-2 text-style-3 text-italic text-gradient scheme-1">HOLDING</span>       
-                  </h2>
-                  <div class="description gray">
-                    <p>During 50 years left behind, with the target of become one of the world’s leading brand companies, we are shaping the industries.</p>
-                  </div>
-                </div>
-                <hr class="gray-25">
-              </div>
-            </div>
+            <!-- Scrolling text -->
+      <section class="shock-section">
+        <div class="scrolling-text">
+          <!-- Text -->
+          <div class="text-wrapper mix-blend-lighter">
+            <h2 class="text text-style-1 text-outline gray-75" data-lax="h-left">SENBAY HOLDING</h2>
+            <h3 class="text text-style-8 text-italic gray-75" data-lax="h-right">During 50 years left behind, with the target of become one of the world’s leading brand companies, we are shaping the industries.</h3>
+          </div>    
+        </div>
+      </section>
           </div>
         </div>
       </section>
